[tool.poetry]
name = "py-hue"
version = "0.1.0"
description = "Control your Phillips Hue Smart Plug via Bluetooth" 
authors = ["Luca-Dorin Anton <32638173+LucaDorinAnton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bluepy = "^1.3.0"
fastapi = "^0.109.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
