[tool.poetry]
name = "py-hue"
version = "0.1.0"
description = "Control your Phillips Hue Smart Plug via Bluetooth" 
authors = ["Luca-Dorin Anton <32638173+LucaDorinAnton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bluepy = "^1.3.0"
fastapi = "^0.109.1"
tenacity = "^8.2.3"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
